tests/baselines/reference/inOperator.errors.txt
inOperator.ts(7,15): error TS2322: Type 'number' is not assignable to type 'object'.
inOperator.ts(11,5): error TS2454: Variable 'y' is used before being assigned.


==== inOperator.ts (2 errors) ====
    var a=[];
    
    for (var x in a) {}
    
    if (3 in a) {}
    
    var b = '' in 0;
                  ~
!!! error TS2322: Type 'number' is not assignable to type 'object'.
    
    var c: any;
    var y: number;
    if (y in c) { }
        ~
!!! error TS2454: Variable 'y' is used before being assigned.
    